# py-check-updates

./: .editorconfig  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.chglog/: config.yml
.github/workflows/: lint.yml  release.yml  test.yml
check_updates/: __init__.py  __main__.py  _version.py  main.py  poetry.py  pre_commit.py  pypi.py  update.py
scripts/: download-all.sh  download-testdata.py
tests/: conftest.py  test_main.py  test_poetry.py  test_pre_commit.py
tests/data/configs/poetry/simple/: pyproject.toml
tests/data/configs/pre-commit/simple/: .pre-commit-config.yaml
